[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-utility"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "SimpleITK",
    "numpy",
    "scikit-learn",
    "scikit-image",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
